Added models, completed basic info panel

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -33,6 +33,7 @@
         <Item id="Tutorial">Tutorial: {0}</Item>
         <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
+        <Item id="ChangeUnit">Change Unit</Item>
 
         <!-- Below are buttons for control panel. -->
         <Item id="Animate">Play/Pause</Item>
@@ -51,8 +52,8 @@
     <Legends>
         <!-- Panels -->
         <Item id="Settings">Settings</Item>
-        <Item id="Data">Data</Item>
-        <Item id="Controls">Controls</Item>
+        <Item id="Lifestyle">Lifestyle</Item>
+        <Item id="BasicInfo">Basic Info</Item>
 
         <Item id="PanelTime">Time</Item>
 
@@ -70,6 +71,13 @@
 
         <Item id="WeightBMI">Weight / BMI</Item>
         <Item id="BloodPressure">Blood Pressure</Item>
+
+        <!-- Basic Info -->
+        <Item id="Gender">Gender</Item>
+        <Item id="Age">Age</Item>
+        <Item id="Height">Height</Item>
+        <Item id="Male">Male</Item>
+        <Item id="Female">Female</Item>
 
         <!-- Lifestyle -->
         <Item id="Exercise">Exercise</Item>
