--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -33,6 +33,7 @@
         <Item id="Tutorial">チュートリアル：{0}</Item>
         <Item id="Cancel">キャンセル</Item>
         <Item id="Confirm">確認</Item>
+        <Item id="ChangeUnit">Change Unit</Item>
 
         <!-- Below are buttons for control panel. -->
         <Item id="Animate">Play/Pause</Item>
@@ -51,8 +52,8 @@
     <Legends>
         <!-- Panels -->
         <Item id="Settings">設定</Item>
-        <Item id="Data">Data</Item>
-        <Item id="Controls">コントロール</Item>
+        <Item id="Lifestyle">Lifestyle</Item>
+        <Item id="BasicInfo">Basic Info</Item>
 
         <Item id="PanelTime">時間</Item>
 
@@ -61,7 +62,7 @@
         <Item id="Date">{0}年{1}月</Item>
 
         <!-- Health biometrics -->
-        <Item id="Weight">Weight</Item>
+        <Item id="Weight">体重</Item>
         <Item id="BMI">BMI</Item>
         <Item id="Glucose">Glucose</Item>
         <Item id="AIC">HbA1C</Item> <!-- (%) -->
@@ -71,12 +72,19 @@
         <Item id="WeightBMI">Weight / BMI</Item>
         <Item id="BloodPressure">Blood Pressure</Item>
 
+        <!-- Basic Info -->
+        <Item id="Gender">性別</Item>
+        <Item id="Age">年齢</Item>
+        <Item id="Height">身長</Item>
+        <Item id="Male">男性</Item>
+        <Item id="Female">女性</Item>
+
         <!-- Lifestyle -->
         <Item id="Exercise">Exercise</Item>
         <Item id="Carb">Carb intake</Item>
         <Item id="Fat">Fat intake</Item>
         <Item id="Protein">Protein intake</Item>
-        <Item id="Sleep">Sleep</Item>
+        <Item id="Sleep">睡眠</Item>
     </Legends>
 
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
