Completed lifestyle panel

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -36,7 +36,6 @@
         <Item id="ChangeUnit">Change Unit</Item>
 
         <!-- Below are buttons for control panel. -->
-        <Item id="Animate">Play/Pause</Item>
         <Item id="Language">言語：{0}</Item>
         <Item id="Unit">Unit: {0}</Item>
         <Item id="Exit">エクシ</Item>
@@ -85,6 +84,10 @@
         <Item id="Fat">Fat intake</Item>
         <Item id="Protein">Protein intake</Item>
         <Item id="Sleep">睡眠</Item>
+
+        <Item id="Hours">{0} hours</Item>
+        <Item id="Minutes">{0} minutes</Item>
+        <Item id="Grams">{0} grams</Item>
     </Legends>
 
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
