--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -36,7 +36,6 @@
         <Item id="ChangeUnit">Change Unit</Item>
 
         <!-- Below are buttons for control panel. -->
-        <Item id="Animate">Play/Pause</Item>
         <Item id="Language">Language: {0}</Item>
         <Item id="Unit">Unit: {0}</Item>
         <Item id="Exit">Exit</Item>
@@ -85,6 +84,10 @@
         <Item id="Fat">Fat intake</Item>
         <Item id="Protein">Protein intake</Item>
         <Item id="Sleep">Sleep</Item>
+
+        <Item id="Hours">{0} hours</Item>
+        <Item id="Minutes">{0} minutes</Item>
+        <Item id="Grams">{0} grams</Item>
     </Legends>
 
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
