Updated icons and texts

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -80,9 +80,9 @@
 
         <!-- Lifestyle -->
         <Item id="Exercise">Exercise</Item>
-        <Item id="Carb">Carb intake</Item>
-        <Item id="Fat">Fat intake</Item>
-        <Item id="Protein">Protein intake</Item>
+        <Item id="Carb">Carb</Item>
+        <Item id="Fat">Fat</Item>
+        <Item id="Protein">Protein</Item>
         <Item id="Sleep">睡眠</Item>
 
         <Item id="Hours">{0} hours</Item>
