Bug fixes: choice renaming and stats path length

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -5,13 +5,9 @@
         <Item id="Lang-en_US">English</Item>
         <Item id="Lang-ja_JP">日本語</Item>
 
-        <Item id="Path">Intervention</Item>
-        <Item id="PathRedConcise">No Change</Item>
-        <Item id="PathYellowConcise">Minimal</Item>
-        <Item id="PathGreenConcise">Optimal</Item>
-        <Item id="PathRedVerbose">No Life Plan Change</Item>
-        <Item id="PathYellowVerbose">Minimal Change</Item>
-        <Item id="PathGreenVerbose">Optimal Change</Item>
+        <Item id="Custom">Custom</Item>
+        <Item id="Worse">Worse</Item>
+        <Item id="Better">Better</Item>
 
         <Item id="StatusGood">Good</Item>
         <Item id="StatusModerate">Moderate</Item>
