--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -5,13 +5,9 @@
         <Item id="Lang-en_US">English</Item>
         <Item id="Lang-ja_JP">日本語</Item>
 
-        <Item id="Path">干渉</Item>
-        <Item id="PathRedConcise">変更なし</Item>
-        <Item id="PathYellowConcise">最小限</Item>
-        <Item id="PathGreenConcise">お勧め</Item>
-        <Item id="PathRedVerbose">変更なし</Item>
-        <Item id="PathYellowVerbose">最小限</Item>
-        <Item id="PathGreenVerbose">お勧め</Item>
+        <Item id="Custom">Custom</Item>
+        <Item id="Worse">Worse</Item>
+        <Item id="Better">Better</Item>
 
         <Item id="StatusGood">良い</Item>
         <Item id="StatusModerate">まあまあ</Item>
