--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -111,19 +111,22 @@
         <Item id="StageTitle">Placing Stage</Item>
         <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
 
-        <Item id="LifestyleTitle">Lifestyles</Item>
-        <Item id="LifestyleText">Click on the four icons to inspect the avatar's lifestyle.</Item>
+        <Item id="BasicInfoTitle">Basic Information</Item>
+        <Item id="BasicInfoText">Click on the input fields to enter your avatar's information. Click "Change Unit" to switch between metric and Imperial units. When you are done, click "Confirm" to submit.</Item>
+
+        <Item id="HealthDataTitle">Health Data</Item>
+        <Item id="HealthDataText">Click on the four icons to inspect the avatar's baseline health data.</Item>
 
         <Item id="VisualizationTitle">Visualizations</Item>
         <Item id="VisualizationText">After checking the lifestyle, click on the icon to begin the visualization and walk into the future of the avatar.</Item>
 
         <Item id="ActivityTitle">Activity</Item>
-        <Item id="ActivityText">You will now see three variants of the same avatar, each with a separate "intervention", running on the street. Click "Play/Pause" to start the timing progress.</Item>
+        <Item id="ActivityText">You will now see three variants of the same avatar, running on the street. Click the Play/Pause button to start the timing progress.</Item>
 
         <Item id="TimeTitle">Progressing Time</Item>
         <Item id="TimeText">Watch how the avatars are slowing down as they grow older. Click "Animate" again to pause the progress.</Item>
-        <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click "Reset" to go back to the present.</Item>
-        <Item id="TimeText3">When you are done exploring, click "Next" to examine what caused these changes.</Item>
+        <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click the "Stop" button to go back to the present.</Item>
+        <Item id="TimeText3">When you are done exploring, click the icons next to the avatars to examine what caused these changes.</Item>
 
         <Item id="PriusTitle">Prius</Item>
         <Item id="PriusText">Check the panel on the right to inspect the details of the organs.&#10;Move your device closer to the avatar to see how Bodylogical works internally.</Item>
