--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -126,7 +126,8 @@
         <Item id="TimeTitle">Progressing Time</Item>
         <Item id="TimeText">Watch how the avatars are slowing down as they grow older. Click "Animate" again to pause the progress.</Item>
         <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click the "Stop" button to go back to the present.</Item>
-        <Item id="TimeText3">When you are done exploring, click the icons next to the avatars to examine what caused these changes.</Item>
+        <Item id="TimeText3">Now, try adjusting the lifestyle options on the panel and see how this would change the avatar's future health.</Item>
+        <Item id="TimeText4">When you are done exploring, click the icons next to the avatars to examine what caused these changes.</Item>
 
         <Item id="PriusTitle">Prius</Item>
         <Item id="PriusText">Check the panel on the right to inspect the details of the organs.&#10;Move your device closer to the avatar to see how Bodylogical works internally.</Item>
