--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -64,7 +64,6 @@
         <Item id="SBP">SBP</Item>
         <Item id="DBP">DBP</Item>
 
-        <Item id="WeightBMI">Weight / BMI</Item>
         <Item id="BloodPressure">Blood Pressure</Item>
 
         <!-- Basic Info -->
@@ -100,42 +99,73 @@
 
     <Tutorials>
         <Item id="PlaneTitle">Plane Finding</Item>
-        <Item id="PlaneText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow. You can also place a Bodylogical logo on the surface to anchor the stage.</Item>
+        <Item id="PlaneText">Bodylogical AR requires physical space to function. Move your device around a flat surface
+            to let the camera scan for space. The scanned space will be highlighted in yellow. You can also place a
+            Bodylogical logo on the surface to anchor the stage.
+        </Item>
 
         <Item id="ConfirmTitle">Confirm Plane</Item>
-        <Item id="ConfirmText">Bodylogical AR requires physical space to function. Move your device around a flat surface to let the camera scan for space. The scanned space will be highlighted in yellow. You can also place a Bodylogical logo on the surface to anchor the stage.&#10;When you have found an ideal surface, double tap the screen to place your stage.</Item>
+        <Item id="ConfirmText">Bodylogical AR requires physical space to function. Move your device around a flat
+            surface to let the camera scan for space. The scanned space will be highlighted in yellow. You can also
+            place a Bodylogical logo on the surface to anchor the stage.&#10;When you have found an ideal surface,
+            double tap the screen to place your stage.
+        </Item>
 
         <Item id="ImageConfirmTitle">Confirm Stage</Item>
-        <Item id="ImageConfirmText">Bodylogical AR has identified an anchor image. Move your image around and spin it to position your stage, and double tap the screen to fix its position.</Item>
+        <Item id="ImageConfirmText">Bodylogical AR has identified an anchor image. Move your image around and spin it to
+            position your stage, and double tap the screen to fix its position.
+        </Item>
 
         <Item id="StageTitle">Placing Stage</Item>
-        <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.</Item>
+        <Item id="StageText">Move your device to adjust the position of the stage. Double tap to confirm its position.
+        </Item>
 
         <Item id="BasicInfoTitle">Basic Information</Item>
-        <Item id="BasicInfoText">Click on the input fields to enter your avatar's information. Click "Change Unit" to switch between metric and Imperial units. When you are done, click "Confirm" to submit.</Item>
+        <Item id="BasicInfoText">Click on the input fields to enter your avatar's information. Click "Change Unit" to
+            switch between metric and Imperial units. When you are done, click "Confirm" to submit.
+        </Item>
 
         <Item id="HealthDataTitle">Health Data</Item>
         <Item id="HealthDataText">Click on the four icons to inspect the avatar's baseline health data.</Item>
 
         <Item id="VisualizationTitle">Visualizations</Item>
-        <Item id="VisualizationText">After checking the lifestyle, click on the icon to begin the visualization and walk into the future of the avatar.</Item>
+        <Item id="VisualizationText">After checking the lifestyle, click on the icon to begin the visualization and walk
+            into the future of the avatar.
+        </Item>
 
         <Item id="ActivityTitle">Activity</Item>
-        <Item id="ActivityText">You will now see three variants of the same avatar, running on the street. Click the Play/Pause button to start the timing progress.</Item>
+        <Item id="ActivityText">You will now see three variants of the same avatar, running on the street. Click the
+            Play/Pause button to start the timing progress.
+        </Item>
 
         <Item id="TimeTitle">Progressing Time</Item>
-        <Item id="TimeText">Watch how the avatars slow down as they grow older. Click "Play/Pause" again to pause the progress.</Item>
-        <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click the "Stop" button to go back to the present.</Item>
-        <Item id="TimeText3">Now, try adjusting the lifestyle options on the panel and see how this would change the avatar's future health.</Item>
-        <Item id="TimeText4">When you are done exploring, click the icons next to the avatars to examine what caused these changes.</Item>
+        <Item id="TimeText">Watch how the avatars slow down as they grow older. Click "Play/Pause" again to pause the
+            progress.
+        </Item>
+        <Item id="TimeText2">You can also drag the handle of the progress bar to jump to a specific time. Click the
+            "Stop" button to go back to the present.
+        </Item>
+        <Item id="TimeText3">Now, try adjusting the lifestyle options on the panel and see how this would change the
+            avatar's future health.
+        </Item>
+        <Item id="TimeText4">When you are done exploring, click the icons next to the avatars to examine what caused
+            these changes.
+        </Item>
 
         <Item id="PriusTitle">Prius</Item>
-        <Item id="PriusText">Here, some internal organs of the avatar are shown. Check their scores and statuses to learn how they affect the avatar's ability to run.&#10;When you are done exploring, click the icon beside each avatar to learn the details.</Item>
+        <Item id="PriusText">Here, some internal organs of the avatar are shown. Check their scores and statuses to
+            learn how they affect the avatar's ability to run.&#10;When you are done exploring, click the icon beside
+            each avatar to learn the details.
+        </Item>
 
         <Item id="InternalTitle">Internals</Item>
-        <Item id="InternalText">Each block represents an organ or a system. Watch how the biometrics are connected together and the data flow across different blocks.</Item>
+        <Item id="InternalText">Each block represents an organ or a system. Watch how the biometrics are connected
+            together and the data flow across different blocks.
+        </Item>
 
         <Item id="StatsTitle">Stats</Item>
-        <Item id="StatsText">The path is colored to show the health status of the avatar across the years. Additionally, the lifestyle of the three "interventions" are available. Click on the icons to show them.</Item>
+        <Item id="StatsText">The path is colored to show the health status of the avatar across the years. Additionally,
+            the lifestyle of the three "interventions" are available. Click on the icons to show them.
+        </Item>
     </Tutorials>
 </Localization>
